fix shape behind heros

--- a/assets/scss/components/_feature.scss
+++ b/assets/scss/components/_feature.scss
@@ -187,11 +187,12 @@
       img {
         z-index: 1;
         max-width: 500px;
+        position: relative;
       }
       .shape {
         position: absolute;
         top: 2%;
-        z-index: -1;
+        z-index: 0;
         right: 0%;
       }
     }
